--- a/ArtifactMaven/test-output/emailable-report.html
+++ b/ArtifactMaven/test-output/emailable-report.html
@@ -9,12 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">53,967</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">40,312</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.TestNGScript.file.HomeAmazon</td><td><a href="#m0">TestAmazonLogo</a></td><td rowspan="1">1563872483839</td><td rowspan="1">4232</td></tr><tr class="passedeven"><td><a href="#m1">TestAmazonSell</a></td><td rowspan="1">1563872497796</td><td rowspan="1">11125</td></tr><tr class="passedeven"><td><a href="#m2">TestHomePageTitle</a></td><td rowspan="1">1563872471883</td><td rowspan="1">107</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.TestNGScript.file.SafetyKuvrrOpenIncident</td><td><a href="#m0">launchSafetyApp</a></td><td rowspan="1">1564228087513</td><td rowspan="1">15945</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.TestNGScript.file.HomeAmazon#TestAmazonLogo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.TestNGScript.file.HomeAmazon#TestAmazonSell</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.TestNGScript.file.HomeAmazon#TestHomePageTitle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.TestNGScript.file.SafetyKuvrrOpenIncident#launchSafetyApp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
