--- a/ArtifactMaven/test-output/index.html
+++ b/ArtifactMaven/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Chandan\AppData\Local\Temp\testng-eclipse-1571059753\testng-customsuite.xml</span>
+                    <span>C:\Users\Chandan\AppData\Local\Temp\testng-eclipse-1019510920\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,17 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.TestNGScript.file.HomeAmazon" hash-for-method="TestAmazonLogo">TestAmazonLogo</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.TestNGScript.file.HomeAmazon" hash-for-method="TestAmazonSell">TestAmazonSell</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.TestNGScript.file.HomeAmazon" hash-for-method="TestHomePageTitle">TestHomePageTitle</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.TestNGScript.file.SafetyKuvrrOpenIncident" hash-for-method="launchSafetyApp">launchSafetyApp</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -130,28 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.TestNGScript.file.HomeAmazon</span>
+              <span class="class-name">com.TestNGScript.file.SafetyKuvrrOpenIncident</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TestAmazonLogo">
-                  </a> <!-- TestAmazonLogo -->
-                  <span class="method-name">TestAmazonLogo</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="TestAmazonSell">
-                  </a> <!-- TestAmazonSell -->
-                  <span class="method-name">TestAmazonSell</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="TestHomePageTitle">
-                  </a> <!-- TestHomePageTitle -->
-                  <span class="method-name">TestHomePageTitle</span>
+                  <a name="launchSafetyApp">
+                  </a> <!-- launchSafetyApp -->
+                  <span class="method-name">launchSafetyApp</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -159,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Chandan\AppData\Local\Temp\testng-eclipse-1571059753\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Chandan\AppData\Local\Temp\testng-eclipse-1019510920\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -168,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.TestNGScript.file.HomeAmazon&quot;/&gt;
+      &lt;class name=&quot;com.TestNGScript.file.SafetyKuvrrOpenIncident&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -208,19 +184,11 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TestAmazonSell')
-data.setCell(0, 2, 'com.TestNGScript.file.HomeAmazon')
-data.setCell(0, 3, 11125);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'TestAmazonLogo')
-data.setCell(1, 2, 'com.TestNGScript.file.HomeAmazon')
-data.setCell(1, 3, 4232);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'TestHomePageTitle')
-data.setCell(2, 2, 'com.TestNGScript.file.HomeAmazon')
-data.setCell(2, 3, 107);
+data.setCell(0, 1, 'launchSafetyApp')
+data.setCell(0, 2, 'com.TestNGScript.file.SafetyKuvrrOpenIncident')
+data.setCell(0, 3, 15945);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -251,43 +219,15 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.TestNGScript.file.HomeAmazon</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.TestNGScript.file.SafetyKuvrrOpenIncident</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
-                <span class="method-name">launchAmazon</span>
+                <span class="method-name">launchSKApp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">TestHomePageTitle</span>
-                <span class="method-start">16093 ms</span>
+                <span class="method-name">launchSafetyApp</span>
+                <span class="method-start">24330 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">16203 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">launchAmazon</span>
-                <span class="method-start">17198 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">TestAmazonLogo</span>
-                <span class="method-start">28049 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">32282 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">launchAmazon</span>
-                <span class="method-start">33134 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">TestAmazonSell</span>
-                <span class="method-start">42006 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">53135 ms</span>
-              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
