--- a/ArtifactMaven/test-output/old/Default suite/methods-alphabetical.html
+++ b/ArtifactMaven/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="758f8a">  <td>19/07/23 14:31:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeAmazon.TestAmazonLogo()[pri:2, instance:com.TestNGScript.file.HomeAmazon@768b970c]">TestAmazonLogo</td> 
-  <td>main@1891546521</td>   <td></td> </tr>
-<tr bgcolor="758f8a">  <td>19/07/23 14:31:37</td>   <td>13957</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeAmazon.TestAmazonSell()[pri:3, instance:com.TestNGScript.file.HomeAmazon@768b970c]">TestAmazonSell</td> 
-  <td>main@1891546521</td>   <td></td> </tr>
-<tr bgcolor="758f8a">  <td>19/07/23 14:31:11</td>   <td>-11956</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeAmazon.TestHomePageTitle()[pri:1, instance:com.TestNGScript.file.HomeAmazon@768b970c]">TestHomePageTitle</td> 
-  <td>main@1891546521</td>   <td></td> </tr>
-<tr bgcolor="758f8a">  <td>19/07/23 14:30:55</td>   <td>-28048</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomeAmazon.launchAmazon()[pri:0, instance:com.TestNGScript.file.HomeAmazon@768b970c]">&gt;&gt;launchAmazon</td> 
-<td>&nbsp;</td>  <td>main@1891546521</td>   <td></td> </tr>
-<tr bgcolor="758f8a">  <td>19/07/23 14:31:12</td>   <td>-10851</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomeAmazon.launchAmazon()[pri:0, instance:com.TestNGScript.file.HomeAmazon@768b970c]">&gt;&gt;launchAmazon</td> 
-<td>&nbsp;</td>  <td>main@1891546521</td>   <td></td> </tr>
-<tr bgcolor="758f8a">  <td>19/07/23 14:31:28</td>   <td>5085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomeAmazon.launchAmazon()[pri:0, instance:com.TestNGScript.file.HomeAmazon@768b970c]">&gt;&gt;launchAmazon</td> 
-<td>&nbsp;</td>  <td>main@1891546521</td>   <td></td> </tr>
-<tr bgcolor="758f8a">  <td>19/07/23 14:31:11</td>   <td>-11846</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomeAmazon.tearDown()[pri:0, instance:com.TestNGScript.file.HomeAmazon@768b970c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1891546521</td>   <td></td> </tr>
-<tr bgcolor="758f8a">  <td>19/07/23 14:31:28</td>   <td>4234</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomeAmazon.tearDown()[pri:0, instance:com.TestNGScript.file.HomeAmazon@768b970c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1891546521</td>   <td></td> </tr>
-<tr bgcolor="758f8a">  <td>19/07/23 14:31:48</td>   <td>25087</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomeAmazon.tearDown()[pri:0, instance:com.TestNGScript.file.HomeAmazon@768b970c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1891546521</td>   <td></td> </tr>
+<tr bgcolor="758f8a">  <td>19/07/27 17:17:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SafetyKuvrrOpenIncident.launchSKApp()[pri:0, instance:com.TestNGScript.file.SafetyKuvrrOpenIncident@7ba18f1b]">&gt;&gt;launchSKApp</td> 
+<td>&nbsp;</td>  <td>main@868964689</td>   <td></td> </tr>
+<tr bgcolor="758f8a">  <td>19/07/27 17:18:07</td>   <td>24328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SafetyKuvrrOpenIncident.launchSafetyApp()[pri:1, instance:com.TestNGScript.file.SafetyKuvrrOpenIncident@7ba18f1b]">launchSafetyApp</td> 
+  <td>main@868964689</td>   <td></td> </tr>
 </table>
