--- a/ArtifactMaven/test-output/index.html
+++ b/ArtifactMaven/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Chandan\AppData\Local\Temp\testng-eclipse--980100277\testng-customsuite.xml</span>
+                    <span>C:\Users\Chandan\AppData\Local\Temp\testng-eclipse-258970476\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.TestNGScript.file.SafetyKuvrrOpenIncident" hash-for-method="launchSafetyApp">launchSafetyApp</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.TestNGScript.file.LoginSKDataProvider" hash-for-method="loginSK(observernoida@yopmail.com, 12345678)">loginSK(observernoida@yopmail.com, 12345678)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.TestNGScript.file.LoginSKDataProvider" hash-for-method="loginSK(obsckorg@yopmail.com, 12345678)">loginSK(obsckorg@yopmail.com, 12345678)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.TestNGScript.file.LoginSKDataProvider" hash-for-method="loginSK(observergzb@yopmail.com, 12345678)">loginSK(observergzb@yopmail.com, 12345678)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.TestNGScript.file.LoginSKDataProvider" hash-for-method="loginSK(obsorgint@yopmail.com, 12345678)">loginSK(obsorgint@yopmail.com, 12345678)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +135,39 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.TestNGScript.file.SafetyKuvrrOpenIncident</span>
+              <span class="class-name">com.TestNGScript.file.LoginSKDataProvider</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="launchSafetyApp">
-                  </a> <!-- launchSafetyApp -->
-                  <span class="method-name">launchSafetyApp</span>
+                  <a name="loginSK(observernoida@yopmail.com, 12345678)">
+                  </a> <!-- loginSK(observernoida@yopmail.com, 12345678) -->
+                  <span class="method-name">loginSK</span>
+                  <span class="parameters">(observernoida@yopmail.com, 12345678)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="loginSK(obsckorg@yopmail.com, 12345678)">
+                  </a> <!-- loginSK(obsckorg@yopmail.com, 12345678) -->
+                  <span class="method-name">loginSK</span>
+                  <span class="parameters">(obsckorg@yopmail.com, 12345678)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="loginSK(observergzb@yopmail.com, 12345678)">
+                  </a> <!-- loginSK(observergzb@yopmail.com, 12345678) -->
+                  <span class="method-name">loginSK</span>
+                  <span class="parameters">(observergzb@yopmail.com, 12345678)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="loginSK(obsorgint@yopmail.com, 12345678)">
+                  </a> <!-- loginSK(obsorgint@yopmail.com, 12345678) -->
+                  <span class="method-name">loginSK</span>
+                  <span class="parameters">(obsorgint@yopmail.com, 12345678)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +175,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Chandan\AppData\Local\Temp\testng-eclipse--980100277\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Chandan\AppData\Local\Temp\testng-eclipse-258970476\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +184,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.TestNGScript.file.SafetyKuvrrOpenIncident&quot;/&gt;
+      &lt;class name=&quot;com.TestNGScript.file.LoginSKDataProvider&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -184,16 +224,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'launchSafetyApp')
-data.setCell(0, 2, 'com.TestNGScript.file.SafetyKuvrrOpenIncident')
-data.setCell(0, 3, 30449);
+data.setCell(0, 1, 'loginSK')
+data.setCell(0, 2, 'com.TestNGScript.file.LoginSKDataProvider')
+data.setCell(0, 3, 13256);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'loginSK')
+data.setCell(1, 2, 'com.TestNGScript.file.LoginSKDataProvider')
+data.setCell(1, 3, 6434);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'loginSK')
+data.setCell(2, 2, 'com.TestNGScript.file.LoginSKDataProvider')
+data.setCell(2, 3, 4405);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'loginSK')
+data.setCell(3, 2, 'com.TestNGScript.file.LoginSKDataProvider')
+data.setCell(3, 3, 4286);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 30 seconds</span>
+              <span class="suite-total-time">Total running time: 28 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,18 +271,54 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.TestNGScript.file.SafetyKuvrrOpenIncident</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.TestNGScript.file.LoginSKDataProvider</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">launchSKApp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">launchSafetyApp</span>
-                <span class="method-start">27040 ms</span>
+                <span class="method-name">loginSK(obsckorg@yopmail.com, 12345678)</span>
+                <span class="method-start">22034 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">closeBrowser</span>
-                <span class="method-start">57497 ms</span>
+                <span class="method-name">closeApp</span>
+                <span class="method-start">35293 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">launchSKApp</span>
+                <span class="method-start">36543 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">loginSK(observergzb@yopmail.com, 12345678)</span>
+                <span class="method-start">57774 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closeApp</span>
+                <span class="method-start">64210 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">launchSKApp</span>
+                <span class="method-start">65531 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">loginSK(observernoida@yopmail.com, 12345678)</span>
+                <span class="method-start">79970 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closeApp</span>
+                <span class="method-start">84259 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">launchSKApp</span>
+                <span class="method-start">85051 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">loginSK(obsorgint@yopmail.com, 12345678)</span>
+                <span class="method-start">95706 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closeApp</span>
+                <span class="method-start">100115 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
