--- a/ArtifactMaven/test-output/old/Default suite/classes.html
+++ b/ArtifactMaven/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.TestNGScript.file.SafetyKuvrrOpenIncident</td>
+<td>com.TestNGScript.file.LoginSKDataProvider</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>launchSafetyApp</td>
+<td>loginSK</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -28,7 +28,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>closeBrowser</td>
+<td>closeApp</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
