--- a/ArtifactIdAppium/test-output/old/Default suite/methods-alphabetical.html
+++ b/ArtifactIdAppium/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c4639c">  <td>19/07/22 11:16:43</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;SK_Tips_Anonymous.launchSafetyKuvrr()[pri:0, instance:com.appium.scripts.SK_Tips_Anonymous@1d29cf23]">&gt;&gt;launchSafetyKuvrr</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@592688102</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>19/07/22 11:17:20</td>   <td>37351</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SK_Tips_Anonymous.testTimerIncident()[pri:0, instance:com.appium.scripts.SK_Tips_Anonymous@1d29cf23]">testTimerIncident</td> 
-  <td>main@592688102</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>19/08/01 18:06:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SK_LoginInstalledApp.launchApp()[pri:0, instance:com.appium.scripts.SK_LoginInstalledApp@5e853265]">launchApp</td> 
+  <td>main@1182461167</td>   <td></td> </tr>
 </table>
