--- a/ArtifactIdAppium/test-output/old/Default suite/methods-alphabetical.html
+++ b/ArtifactIdAppium/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c4639c">  <td>19/08/02 12:47:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SK_SOSInstalledApp.Login()[pri:0, instance:com.appium.scripts.SK_SOSInstalledApp@33f88ab]">&gt;&gt;Login</td> 
-<td>&nbsp;</td>  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>19/08/02 12:48:07</td>   <td>57443</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SK_SOSInstalledApp.SOS()[pri:0, instance:com.appium.scripts.SK_SOSInstalledApp@33f88ab]">SOS</td> 
-  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>19/08/02 12:46:39</td>   <td>-30202</td> <td>&nbsp;</td><td title="&gt;&gt;SK_SOSInstalledApp.launchApp()[pri:0, instance:com.appium.scripts.SK_SOSInstalledApp@33f88ab]">&gt;&gt;launchApp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@738433734</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>19/08/02 12:48:34</td>   <td>84486</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SK_SOSInstalledApp.logOutApp()[pri:0, instance:com.appium.scripts.SK_SOSInstalledApp@33f88ab]">&lt;&lt;logOutApp</td> 
-<td>&nbsp;</td>  <td>main@738433734</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>19/08/03 11:52:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SK_IA_TimerIncident.TimerIncident()[pri:0, instance:com.appium.scripts.SK_IA_TimerIncident@2d8f65a4]">TimerIncident</td> 
+  <td>main@1489069835</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>19/08/03 11:50:43</td>   <td>-123700</td> <td>&nbsp;</td><td title="&gt;&gt;SK_IA_TimerIncident.launchApp()[pri:0, instance:com.appium.scripts.SK_IA_TimerIncident@2d8f65a4]">&gt;&gt;launchApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1489069835</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>19/08/03 11:59:02</td>   <td>375627</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SK_IA_TimerIncident.logOutApp()[pri:0, instance:com.appium.scripts.SK_IA_TimerIncident@2d8f65a4]">&lt;&lt;logOutApp</td> 
+<td>&nbsp;</td>  <td>main@1489069835</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>19/08/03 11:51:41</td>   <td>-65189</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SK_IA_TimerIncident.signInApp()[pri:0, instance:com.appium.scripts.SK_IA_TimerIncident@2d8f65a4]">&gt;&gt;signInApp</td> 
+<td>&nbsp;</td>  <td>main@1489069835</td>   <td></td> </tr>
 </table>
