--- a/ArtifactIdAppium/test-output/old/Suite/toc.html
+++ b/ArtifactIdAppium/test-output/old/Suite/toc.html
@@ -22,32 +22,32 @@
 </tr></table>
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>SKSOS (1/0/0)</td><td valign='top' align='right'>
-  <a href='SKSOS.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>SK_IA_CreateAccount (1/0/0)</td><td valign='top' align='right'>
+  <a href='SK_IA_CreateAccount.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>SKSafeWalk (1/0/0)</td><td valign='top' align='right'>
-  <a href='SKSafeWalk.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>SK_IA_SOS (1/0/0)</td><td valign='top' align='right'>
+  <a href='SK_IA_SOS.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>SKTimer (1/0/0)</td><td valign='top' align='right'>
-  <a href='SKTimer.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>SK_IA_SafeWalk (1/0/0)</td><td valign='top' align='right'>
+  <a href='SK_IA_SafeWalk.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>SKTips (1/0/0)</td><td valign='top' align='right'>
-  <a href='SKTips.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>SK_IA_Timer (1/0/0)</td><td valign='top' align='right'>
+  <a href='SK_IA_Timer.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
